# python-server

./: Dockerfile  pyproject.toml
app/src/: __init__.py  config.py  main.py  schema.py  webapp.py
app/src/apis/: __init__.py  authenticated_apis.py  no_auth_apis.py  system_status.py
app/tests/: test_config.py  test_routes.py  test_webapp.py
